<resources>
    <string name="app_name">My Talking Friend</string>
    <string name="aac_name_en">AAC Name</string>
    <string name="img_content_desc_en">Image Content Description</string>
    <string name="aac_group_name_en">AAC Group Name</string>
    <string name="add_aac_button_en">Add AAC Button</string>
    <string name="aac_groups_en">AAC Groups</string>
    <string name="add_group_en">Add Group</string>
    <string name="last_used_aac_en">Last Used AAC</string>
    <string name="option_en">OPTION</string>
    <string name="voice_sound_setting_en">Voice Sound Setting</string>
    <string name="save_option_en">Save Option</string>
    <string name="aac_button_name_en">AAC Button Name</string>
    <string name="aac_button_name_hint_en">Insert AAC name here</string>
    <string name="last_used_aac">Last Used AAC</string>
    <string name="aac_button_image_en">AAC Button Image</string>
    <string name="aac_button_desc_en">AAC Button Description</string>
    <string name="aac_button_desc_hint_en">Insert AAC description here</string>
    <string name="voice_selection_en">Voice Selection</string>
    <string name="submit_en">Submit</string>
    <string name="group_name_en">Group Name</string>
    <string name="group_name_hint_en">Insert group name here</string>
    <string name="group_image_en">Group Image</string>
</resources>