<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_name_en"
        style="@style/TitleStyle"/>
    <EditText
        android:id="@+id/insert_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/group_name_hint_en"
        android:hint="@string/group_name_hint_en"
        android:inputType="text"
        android:maxLines="1"
        style="@style/EditTextStyle"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_image_en"
        style="@style/TitleStyle"/>
    <ImageView
        android:id="@+id/insert_group_image"
        android:contentDescription="@string/img_content_desc_en"
        android:src="@drawable/no_image"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/group_submit_button"
        android:background="@drawable/button_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_en"
        android:textSize="20sp"/>
</LinearLayout>