<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:text="@string/aac_groups_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/TitleStyle"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/add_group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aac_groups_en"
        android:textSize="20sp"
        android:background="@drawable/button_design"
        android:layout_marginBottom="20dp"
        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/group_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/basic_group0"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/img_content_desc_en"
                android:scaleType="fitCenter"
                android:src="@drawable/circle_1" />

            <ImageButton
                android:id="@+id/basic_group1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/img_content_desc_en"
                android:scaleType="fitCenter"
                android:src="@drawable/circle_2" />

            <ImageButton
                android:id="@+id/basic_group2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/img_content_desc_en"
                android:scaleType="fitCenter"
                android:src="@drawable/circle_3" />

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:text="@string/last_used_aac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        style="@style/TitleStyle"/>

    <GridLayout
        android:id="@+id/main_aac_container"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2">

    </GridLayout>

</LinearLayout>